--- a/alchemy/pubspec.yaml
+++ b/alchemy/pubspec.yaml
@@ -25,6 +25,13 @@ dependencies:
   cupertino_icons: ^0.1.2
   provider: ^3.1.0
   http: ^0.12.0+2
+  flutter_markdown:
+    git:
+        url: https://github.com/simpleclub/flutter_markdown.git
+        ref: alignment
+  html2md: ^0.5.1
+  url_launcher: ^5.4.1
+  
 
 dev_dependencies:
   flutter_test:
