--- a/alchemy/pubspec.yaml
+++ b/alchemy/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  webview_flutter: ^0.3.19+2 
   cupertino_icons: ^0.1.2
   provider: ^3.1.0
   http: ^0.12.0+2
@@ -35,6 +36,7 @@ dependencies:
         ref: alignment
   html2md: ^0.5.1
   url_launcher: ^5.4.1
+  
   
 
 dev_dependencies:
