--- a/alchemy/pubspec.yaml
+++ b/alchemy/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
         url: https://github.com/simpleclub/flutter_markdown.git
         ref: alignment
   html2md: ^0.5.1
+  shared_preferences: ^0.5.7+3
   
   
 
