--- a/alchemy/pubspec.yaml
+++ b/alchemy/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  webview_flutter: ^0.3.19+2 
+  url_launcher: ^5.5.0
   provider: ^3.1.0
   http: ^0.12.0+2
   flutter_markdown:
