--- a/alchemy/android/key.properties
+++ b/alchemy/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=02031999
-keyPassword=Snowen100
-keyAlias=key
-storeFile=C:\\Users\\Anne\\key.jks
+storePassword=Snowen100
+keyPassword=Snowen200
+keyAlias=upload
+storeFile=C:\\Users\\Anne\\Desktop\\upload-keystore.jks
